# hyperknowledge

./: .gitignore  pyproject.toml  setup.cfg
deploy/: admin.sql  agent.sql  agent_functions.sql  base.sql  context_history.sql  event_handler.sql  event_processor.sql  event_processor_functions.sql  events.sql  events_functions.sql  identifiers.sql  permissions.sql  projections.sql  topic.sql  topic_functions.sql  valueobjects.sql
doc/: Makefile  conf.py  db_updater.rst  index.rst  install.rst  overview.rst
docker/: docker-compose.yml
docker/postgres/: Dockerfile
docker/server/: Dockerfile  Dockerfile.dockerignore
hyperknowledge/: __init__.py
hyperknowledge/eventdb/: __init__.py  add_data.py  auth.py  context.py  make_tables.py  models.py  processor.py  projection_processor.py  pydantic_adapters.py  schemas.py  server.py  websockets.py
revert/: admin.sql  agent.sql  agent_functions.sql  base.sql  context_history.sql  event_handler.sql  event_processor.sql  event_processor_functions.sql  events.sql  events_functions.sql  identifiers.sql  permissions.sql  projections.sql  topic.sql  topic_functions.sql  valueobjects.sql
revert/future/: perspective.sql
scripts/: db_updater.py  initial_setup.py  rebuild_roles.sql
static/: ws_test.html
test/: conftest.py
test/fixtures/: fixtures.py
test/schemas/: handlers.yaml  hyperknowledge_events.jsonld  simple_schema.json
test/server/: test_base.py
