[project]
name = "hyperknowledge-event-db"
version = "0.0.1"
authors = [
  { name = "Marc-Antoine Parent", email = "maparent@conversence.com" }
]
license = "AGPL-3.0-or-later"
dependencies = [
  "anyio",
  "asyncpg-listen",
  "asyncpg@git+https://github.com/MagicStack/asyncpg.git",
  "bcrypt",
  "fastapi",
  "greenlet",
  "grequests",
  "gunicorn",
  "langcodes",
  "mini_racer",
  "passlib",
  "pydantic",
  "python-jose[cryptography]",
  "python-multipart",
  "PyYAML",
  "rdflib",
  "sqlalchemy_utils",
  "sqlalchemy",
  "uvicorn",
  "websockets",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "asgi-lifespan",
  "httpx_ws",
  "httpx",
  "pytest-asyncio",
  "pytest",
]
docs = [
  "Sphinx"
]


[project.scripts]
add_data = "hyperknowledge.event_db.add_data:main"

[project.urls]
"Source Code" = "https://github.com/conversence/hyperknowledge_es.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperknowledge"]

[tool.hatch.metadata]
allow-direct-references = true