[metadata]
name = hyperknowledge-event-db
version = 0.0.1
author = Marc-Antoine Parent
author_email = maparent@conversence.com
license_files = LICENSE.txt

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
  anyio<4
  asyncpg
  asyncpg-listen
  bcrypt
  fastapi
  greenlet
  grequests
  gunicorn
  langcodes
  passlib
  pydantic
  python-jose[cryptography]
  PyYAML
  rdflib
  sqlalchemy<2.0.21
  sqlalchemy_utils
  uvicorn
  python-multipart
  py_mini_racer
  websockets

[options.extras_require]
docs =
  Sphinx
tests =
  httpx
  httpx_ws
  pytest
  pytest-asyncio
  asgi-lifespan


[options.entry_points]
console_scripts =
    add_data = hyperknowledge.event_db.add_data:main
